# lab_gtk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.c  main.cpp
ui/: calculator.ui
