PROJECT(galc CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

SET(CXX_DBG "-g")
SET(CXX_FLG "--warn-unused-variable -unknown-pragmas -Wall -Werror")
SET(CXX_THD "-pthread")
SET(CXX_OPT "-Ofast")
LIST(APPEND CMAKE_CXX_FLAGS "${CXX_DBG} ${CXX_FLAG} ${CXX_THD} ${CXX_OPT}")

if (MSVC)
elseif(APPLE)
else()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wextra")
endif()

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(filius/include)

# Add other flags to the compiler
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

SET(FILIUS_SRC filius/src)
SET(CURVE_SRC ${FILIUS_SRC}/Curve.cpp)
SET(SIM_SRC ${FILIUS_SRC}/Simulation.cpp)
SET(G2PP_SRC ${FILIUS_SRC}/G2PP.cpp)
ADD_EXECUTABLE(galc src/main.cpp ${CURVE_SRC} ${SIM_SRC} ${G2PP_SRC})

TARGET_LINK_LIBRARIES(galc ${GTK3_LIBRARIES})

# PHONY TARGETS
ADD_CUSTOM_TARGET(bd make -j4)
ADD_CUSTOM_TARGET(rn galc)
ADD_CUSTOM_TARGET(mc memcheck "./galc")
